# torchez

./: .gitignore  LICENSE  pyproject.toml  tox.ini
src/torchez/: module_loader.py
tests/: test_module_loader.py
